--- a/mi.repositorio/css/pruebacss.css
+++ b/mi.repositorio/css/pruebacss.css
@@ -11,12 +11,21 @@ h2 {
   color: white;
   text-align: center;
   padding-top: 10px;
-  font-size: 25px;
+  font-size: 20px;
   animation-duration: 2s;
   animation-name: aparecer; }
 
 h2, h3, h4, p, div, li, td {
   font-family: "Commissioner", sans-serif; }
+
+h3, .tit {
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+  font-size: 30px;
+  animation-duration: 2s;
+  animation-name: aparecer;
+  font-weight: normal; }
 
 div.menu li {
   float: left;
@@ -30,10 +39,15 @@ a {
   font-size: 15px; }
 
 img {
-  width: 200px; }
+  width: 200px;
+  display: block;
+  margin: auto; }
+
+img:hover {
+  transform: scale(1.5, 1.5); }
 
 img.rounded-circle:hover {
-  transform: scale(2, 2); }
+  transform: scale(1, 1); }
 
 li h3 {
   font-weight: bold;
@@ -77,16 +91,36 @@ ul li p {
 div.soft ul li {
   text-align: right; }
 
-table {
-  margin: auto; }
+/*logos*/
+.logos {
+  margin: 13% 10% 10% 10%; }
 
-form {
-  display: block;
-  padding: 1% 1% 1% 40%; }
+/*proyectos*/
+.juana {
+  width: 300px;
+  margin: 1% 20% 10% 40%; }
 
-#myCarousel {
-  margin: 1% 1% 1% 3%; }
+.juanah {
+  text-align: center;
+  margin-top: 10%;
+  margin-right: 50%; }
 
-.carousel-inner img {
-  height: 50%;
-  margin-left: 43%; }
+.juanap {
+  margin-right: 50%;
+  font-size: 16px;
+  padding: 0px; }
+
+.rof {
+  width: 600px;
+  margin: 1% 10% 10% 0%; }
+
+.rofh {
+  text-align: center;
+  margin-top: 10%;
+  margin-left: 20%; }
+
+.rofp {
+  margin-left: 30%;
+  margin-right: 10%;
+  font-size: 16px;
+  padding: 0px; }
