--- a/mi.repositorio/scss/prueba.scss
+++ b/mi.repositorio/scss/prueba.scss
@@ -11,7 +11,7 @@ h1 {color: $myWhite;
    animation-name: aparecer;
    }
 
-h2{ color: $myWhite; text-align: center; padding-top: 10px; font-size: 25px; animation-duration: 2s;
+h2{ color: $myWhite; text-align: center; padding-top: 10px; font-size: 20px; animation-duration: 2s;
   animation-name: aparecer;
 	
    }
@@ -20,6 +20,12 @@ h2{ color: $myWhite; text-align: center; padding-top: 10px; font-size: 25px; ani
 
 h2, h3, h4, p, div, li, td { font-family: $myFuente2; 
 							}
+h3, .tit
+ { color: $myWhite; text-align: center; padding-top: 10px; font-size: 30px; animation-duration: 2s;
+  animation-name: aparecer; font-weight:normal;
+	
+}
+
 
 
 
@@ -39,13 +45,19 @@ a { text-decoration: none;
 	}
 
 img {width:200px;
-
+display:block; margin:auto;
 	
 			}
 
 
+img:hover {
+  transform: scale(1.5, 1.5); }
+
+
 img.rounded-circle:hover {
-    transform: scale(2, 2); }
+    transform: scale(1, 1); }
+
+
 
 li h3{
 	font-weight:bold;
@@ -88,16 +100,54 @@ ul li p { text-align: left;
 
 div.soft ul li { text-align: right; }
 
-table {
-  margin: auto; }
 
-form {
-  display: block;
-  padding: 1% 1% 1% 40%; }
+/*logos*/
 
-#myCarousel {margin: 1% 1% 1% 3%;
-            
-              }
+.logos { 
 
-.carousel-inner img {height: 50%; margin-left: 43%;}
- 
+	margin:13% 10%
+	10% 10%;
+}
+
+
+
+/*proyectos*/
+
+.juana{
+		width: 300px;
+		margin:1% 20% 10% 40%;
+	
+			}
+.juanah {text-align: center;
+margin-top:10%;
+margin-right:50%;
+
+}
+.juanap {margin-right:50%;
+font-size:16px;
+padding:0px;
+
+}
+
+
+.rof {width: 600px;
+	margin:1% 10% 10% 0%;
+	}
+
+.rofh {text-align: center;
+margin-top:10%;
+margin-left:20%;
+
+}
+
+.rofp {margin-left:30%;
+margin-right:10%;
+font-size:16px;
+padding:0px;
+}
+
+
+
+
+
+
